--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "babel-preset-stage-2": "^6.24.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
